# esp32-electricity-api-display

./: .gitignore  CMakeLists.txt  README.md
components/api_controller/: CMakeLists.txt  api_controller.c  idf_component.yml
components/api_controller/include/: api_controller.h
components/button_controller/: CMakeLists.txt  button_controller.c  idf_component.yml
components/button_controller/include/: button_controller.h
components/display_controller/: CMakeLists.txt  display_controller.c
components/display_controller/include/: display_controller.h
components/networking/: CMakeLists.txt  networking.c
components/networking/include/: networking.h
components/ssd1306/: CMakeLists.txt  ssd1306.c
components/ssd1306/include/: ssd1306.h
components/time_utils/: CMakeLists.txt  time_utils.c
components/time_utils/include/: time_utils.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/internal/: api_controller.c  api_controller.h  button_controller.c  button_controller.h  display_controller.c  display_controller.h  time_date.c  time_date.h
